2003-09-23  Philip Blundell  <philb@gnu.org>

	* Version 0.7-7 released.

2003-03-23  Colin Marquardt  <colin@marquardt-home.de>

	* Makefile (install-program): New name for 'install' ('install' is
	now provided by Makefile.dpkg_ipkg).  
	(CVSBUILD): New variable.
	(BUILD): New variable. Use it.
	Use -s option for installing the binary, get rid of the strip call.

2002-12-01  Philip Blundell  <philb@gnu.org>

	* familiar/control (Version): 0.7-5

	* ipaq-sleep.c: Only try to open debug file if debugging enabled.
	Wrap more debug stuff in #ifdef DEBUG.

2002-07-29  Colin Marquardt  <colin@marquardt-home.de>

	* Makefile: Use "include ../build/Makefile.dpkg_ipkg".

2002-07-22  Colin Marquardt  <colin@marquardt-home.de>

	* familiar/control (Module): Change wording a bit. Add that it
	looks at battery status now too.

	* Makefile (ipkg): Copy familiar/preinst, familiar/postinst and
	familiar/conffiles to /familiar/dist/ too.
	(install): Remove the lines that deal with rc2.d.

	* familiar/postinst (Module): New file. 
	Symlinks/etc/X11/Xsession.d/69ipaq-sleep to
	/etc/X11/Xsession-gpe.d/69ipaq-sleep.

	* familiar/preinst (Module),
	  familiar/control (Module),
	  familiar/conffiles (Module),
	  ipaq-sleep.session (Module): New files pulled from the ipk.

	* Makefile (install): Install the setup files too.
