@@ -1,5 +1,6 @@
-auto-sleep_time	= 180	# auto-sleep time-out in seconds (<=0 disables)
-dim_time	= 90	# backlight dim time-out in seconds (<=0 disables)
+auto-sleep_time	= 600	# auto-sleep time-out in seconds (<=0 disables)
+dim_time	= 180	# backlight dim time-out in seconds (<=0 disables)
+dim_level  = 4 
 check_apm	= 1	# apm flag 0=no 1=yes
 X		= 1	# X flag 1=check activity 0=dont
 debug		= 0	# debug flag 0=no 1=yes
